--- a/MiniShopProject-EFCore-FCM.csproj
+++ b/MiniShopProject-EFCore-FCM.csproj
@@ -18,4 +18,8 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Entities\" />
+  </ItemGroup>
+
 </Project>
